[package]
name = "aetna-wgpu"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Aetna — wgpu backend (native + wasm)"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/aetna-wgpu"
keywords = ["ui", "gui", "wgpu", "wasm", "renderer"]
categories = ["gui", "rendering"]

[lib]
path = "src/lib.rs"

[dependencies]
aetna-core = { version = "0.3.0", path = "../aetna-core" }
wgpu = "29"
bytemuck = { version = "1.21", features = ["derive"] }
cosmic-text = "0.19"
ttf-parser = "0.25.1"
# Drop-in `Instant::now()` that works on wasm32; std's panics there.
web-time = "1"

# wgpu's WebGPU types are `!Send + !Sync` on wasm32 (no threads in
# vanilla wasm). `AppTextureBackend` requires `Send + Sync` so the type-
# erased `AppTexture` can flow through the backend-neutral paint stream.
# Opt into wgpu's blessed escape hatch on wasm32 only — sound because
# vanilla wasm32 is single-threaded; native targets keep the real impls.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "29", features = ["fragile-send-sync-non-atomic-wasm"] }

[dev-dependencies]
aetna-fixtures = { version = "0.3.0", path = "../aetna-fixtures" }
png = "0.18"
pollster = "0.4"
