[package]
name = "aetna-winit-wgpu"
version = "0.1.0"
edition = "2024"
description = "Aetna — optional winit desktop host for the wgpu backend"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/aetna-winit-wgpu"

[lib]
path = "src/lib.rs"

[dependencies]
aetna-core = { version = "0.1.0", path = "../aetna-core" }
aetna-wgpu = { version = "0.1.0", path = "../aetna-wgpu" }
pollster = "0.4"
wgpu = "29"
winit = "0.30"
