[package]
name = "aetna-winit-wgpu"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Aetna — optional winit desktop host for the wgpu backend"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/aetna-winit-wgpu"
keywords = ["ui", "gui", "winit", "wgpu", "desktop"]
categories = ["gui"]

[lib]
path = "src/lib.rs"

[dependencies]
aetna-core = { version = "0.1.0", path = "../aetna-core" }
aetna-wgpu = { version = "0.1.0", path = "../aetna-wgpu" }
pollster = "0.4"
wgpu = "29"
winit = "0.30"
