[package]
name = "aetna-winit-wgpu"
version = "0.3.2"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Aetna — optional winit desktop host for the wgpu backend"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/aetna-winit-wgpu"
keywords = ["ui", "gui", "winit", "wgpu", "desktop"]
categories = ["gui"]

[lib]
path = "src/lib.rs"

[dependencies]
aetna-core = { version = "0.3.2", path = "../aetna-core" }
aetna-wgpu = { version = "0.3.2", path = "../aetna-wgpu" }
# `arboard` backs the native clipboard bridge. The core crate stays
# backend-neutral; this host handles platform clipboard IO for common
# selection copy shortcuts.
arboard = { version = "3", features = ["wayland-data-control"] }
# `open` shells out to xdg-open / `start` / `open` for the
# `App::drain_link_opens` host path. Tiny crate, well-maintained, no
# blocking IO inside the call (it spawns the platform launcher).
open = "5"
pollster = "0.4"
wgpu = "29"
winit = "0.30"

[features]
# Forwards to `aetna-core/profiling` and `aetna-wgpu/profiling`. Off by
# default. When on, the host emits `frame::build` / `frame::prepare` /
# `frame::submit` spans alongside the per-phase spans inside the
# renderer. Hosts attach their own subscriber (e.g. `tracing-chrome`).
profiling = ["aetna-core/profiling", "aetna-wgpu/profiling"]
